[package]
name = "media-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
config = { version = "0.13.3", features = ["toml"], default-features = false }
env_logger = "0.10.0"
http = "0.2.8"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
urlencoding = "2.1.2"

[[bin]]
name = "media-resolver"
path = "src/main.rs"
