[package]
name = "media-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
config = { version = "0.14.0", features = ["toml"], default-features = false }
env_logger = "0.11.3"
http = "1.1.0"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
urlencoding = "2.1.3"

[[bin]]
name = "media-resolver"
path = "src/main.rs"
