[package]
name = "media-resolver"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
actix-web = "4.8.0"
config = { version = "0.14.0", features = ["toml"], default-features = false }
env_logger = "0.11.5"
http = "1.1.0"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
urlencoding = "2.1.3"

[[bin]]
name = "media-resolver"
path = "src/main.rs"
